# traffic_sim_multithreading

./: CMakeLists.txt  Graphics.cpp  Graphics.h  Intersection.cpp  Intersection.h  MessageQueue.h  README.md  Street.cpp  Street.h  TrafficLight.cpp  TrafficLight.h  TrafficObject.h  Vehicle.cpp  Vehicle.h  main.cpp
benchmarks/: bench_message_queue.cpp  bench_simulation_scaling.cpp
src/: Street.h  TrafficObject.cpp  TrafficObject.h
tests/: test_intersection.cpp  test_message_queue.cpp  test_traffic_light.cpp  test_vehicle.cpp  test_waiting_vehicles.cpp
